# ortmlprod-practico2-scraping

./: .gitignore  README.md  pyproject.toml  read_database.py
src/: main.py
src/database/: database_connection.py
src/scrapers/: gallito.py
src/settings/: config.yml  logger.py
src/structs/: __init__.py  property.py
