[project]
name = "pr-ctico-2-docker-y-web-scraping-santiago-moron-main"
version = "0.1.0"
description = ""
authors = [
    {name = "Santiago Morón Santos",email = "santimoron001@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic (>=2.12.5,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "playwright (>=1.58.0,<2.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false